gobmkida/g0/find_connection_moves
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/find_connection_moves/src/engine/readconnect.c:1330:22: error: use of undeclared identifier 'unk_4DD54F'
v8 = ( const char *)&unk_4DD54F; 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/find_connection_moves/src/obj/1/readconnect.o] Error 1
